# MHPC_Minimal_Env

./: CMakeLists.txt  Readme.md  test_main.cpp
CasadiGen/header/: CasadiGen.h  Dyn_BS.h  Dyn_BS_par.h  Dyn_FL.h  Dyn_FL_par.h  Dyn_FS.h  Dyn_FS_par.h  FBDynamics.h  FBDynamics_par.h  Imp_B.h  Imp_B_par.h  Imp_F.h  Imp_F_par.h  Jacob_B.h  Jacob_F.h  Link0Jacobian.h  Link1Jacobian.h  Link2Jacobian.h  Link3Jacobian.h  Link4Jacobian.h  WB_FL1_terminal_constr.h  WB_FL2_terminal_constr.h
CasadiGen/source/: CasadiGen.cpp  Dyn_BS.c  Dyn_BS_par.c  Dyn_FL.c  Dyn_FL_par.c  Dyn_FS.c  Dyn_FS_par.c  FBDynamics.c  FBDynamics_par.c  Imp_B.c  Imp_B_par.c  Imp_F.c  Imp_F_par.c  Jacob_B.c  Jacob_F.c  Link0Jacobian.c  Link1Jacobian.c  Link2Jacobian.c  Link3Jacobian.c  Link4Jacobian.c  WB_FL1_terminal_constr.c  WB_FL2_terminal_constr.c
Common/header/: Gait.h  MHPC_CPPTypes.h  MHPC_CompoundTypes.h  help.h  orientation_tools.h
Common/source/: help.cpp
Controller/Heuristics/: boundingPDControl.cpp  boundingPDControl.h
Controller/MHPCLocomotion/: MHPCConstraints.cpp  MHPCConstraints.h  MHPCCost.cpp  MHPCCost.h  MHPCLocomotion.cpp  MHPCLocomotion.h
Dynamics/: CMakeLists.txt
Dynamics/header/: FootholdPlan.h  PlanarFloatingBase.h  PlanarQuadruped.h  PlanarRobot.h
Dynamics/source/: PlanarFloatingBase.cpp  PlanarQuadruped.cpp  PlanarQuadruped.cpp_copy
HSDDPSolver/: CMakeLists.txt
HSDDPSolver/header/: ConstraintsBase.h  CostBase.h  MultiPhaseDDP.h  ReferenceGen.h  SinglePhase.h  SinglePhaseAbstract.h
HSDDPSolver/source/: CostBase.cpp  MultiPhaseDDP.cpp  ReferenceGen.cpp  SinglePhase.cpp  SinglePhaseAbstract.cpp
